<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:gravity="center"
    tools:context="com.hrs.financial.payment.BillAddActivity">

    <TableRow>
         <TextView android:id="@+id/bill_title_tv"
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
             android:text="@string/bill_title"
             android:gravity="right"
             android:layout_weight="1"
             android:textSize="20dp" />

        <EditText android:id="@+id/bill_title_et"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_span="2"
            android:layout_weight="8" />
    </TableRow>
    <TableRow>
        <TextView android:id="@+id/bill_date_tv"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/bill_date"
                android:gravity="right"
                android:layout_weight="1"

                android:textSize="20dp" />

        <EditText android:id="@+id/bill_date_et"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_weight="4" />

        <EditText android:id="@+id/bill_date_et1"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_weight="4" />
    </TableRow>

    <TableRow>
        <TextView android:id="@+id/bill_money_tv"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                android:text="@string/bill_money"
                android:gravity="right"
                android:layout_weight="1"
                android:textSize="20dp"/>
        <EditText android:id="@+id/bill_money_et"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:ems="10"
            android:layout_span="2"
            android:inputType="numberDecimal"
            android:layout_weight="8" />
    </TableRow>
    <TableRow>
        <TextView android:id="@+id/bill_comment_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bill_comment"
               android:gravity="right"
              android:layout_weight="1"
             android:textSize="20dp"/>
        <EditText
            android:id="@+id/bill_comment_et"
            android:inputType="textMultiLine"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_span="2"
            android:layout_weight="8"

            />
    </TableRow>

    <TableRow>
        <TextView android:id="@+id/bill_type_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bill_type"
            android:gravity="right"
            android:layout_weight="1"
            android:textSize="20dp"/>
        <Spinner android:id="@+id/bill_type_sp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_weight="8"
            android:layout_span="2">
        </Spinner>
    </TableRow>
    <TableRow >
        <LinearLayout
             android:layout_marginTop="5dp"
            android:layout_height="wrap_content"
                 android:layout_width="fill_parent"
                android:orientation="horizontal"
               android:gravity="center_horizontal"
                android:layout_span="3"
                android:layout_weight="9"
            >
            <Button
                android:id="@+id/bill_add_bt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save_bt"
                />
            <Button
                android:id="@+id/bill_back_bt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/back_bt"
                />
        </LinearLayout>

    </TableRow>

</TableLayout>
