<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.hrs.financial.MainActivity" >

	<EditText
	    android:id="@+id/login_username_et"
	    android:layout_width="wrap_content"
		android:ems="8"
	    android:layout_height="wrap_content"
	    android:layout_alignBottom="@+id/login_username_tv"
	    android:layout_toRightOf="@+id/login_username_tv"
	    android:inputType="text"
	    android:maxLength="26" />



	<TextView
	    android:id="@+id/login_username_tv"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentLeft="true"
	    android:layout_alignParentTop="true"
	    android:layout_marginLeft="40dp"
	    android:layout_marginTop="120dp"
	    android:text="@string/login_username" />
	
	
	<TextView 
	    android:id="@+id/login_password_tv"
	    android:layout_below="@+id/login_username_tv"
	    android:layout_alignLeft="@+id/login_username_tv"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="20dp"
	    android:text="@string/login_password"/>
	
	<EditText
	    android:id="@+id/login_password_et"
	    android:layout_width="wrap_content"
		android:ems="8"
	    android:layout_height="wrap_content"
	    android:layout_below="@+id/login_username_et"
	    android:layout_alignBottom="@+id/login_password_tv"
	    android:layout_alignLeft="@+id/login_username_et"
	    android:inputType="textPassword"
	    android:maxLength="26" />
	
	 <Button
	     android:id="@+id/login_btn"
	     android:layout_width="wrap_content"
		 android:layout_height="wrap_content"
	     android:layout_below="@id/login_password_et"
	     android:layout_centerHorizontal="true"
	     android:textSize="12sp"
	     android:text="@string/login_btn_name" />

</RelativeLayout>
